--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 *.iws
 *.iml
 *.ipr
+*.log
+*.log*.gz
 
 ### NetBeans ###
 /nbproject/private/
@@ -23,3 +25,4 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+/src/main/resources/application.properties
